--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "redux": "^4.0.5",
     "typeface-roboto": "0.0.75"
   }
 }
