--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@material-ui/icons": "^4.5.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
+    "next-redux-wrapper": "^5.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "typeface-roboto": "0.0.75"
   }
