--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next"
+    "build": "react-scripts build",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.1.4",
-    "next-redux-wrapper": "^5.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
